# ockero_data_pipeline

./: .gitignore  .user.yml  README.md  cli.py  install.command  install.py  main.py  pipeline.py  profiles.yml  pyproject.toml  requirements.txt  run-app.cmd  run-app.command  run_pipeline.py
Skoldata_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data_in/: SchoolSoft_EA_Elever.xlsx  TestDataElin.txt
dbt/: dbt_project.yml
dbt/macros/: capitlize_upper_text.sql  export_csv_to_folder.sql  export_parquet_to_folder.sql
dbt/models/1-raw/: d_calendar.sql  raw_elin_students.sql
dbt/models/2-staging/: schoolsoft_schools.sql
dlt/: README.md  dlt_utils.py  pipeline.py  source_elin_testdata.py  source_schoolsoft.py  source_ss12000.py
dlt_ockero/: README.md  dlt_utils.py  pipeline.py  source.py
docs/: SchoolSoft Dataspecifikation.xlsx  ~$keröPOC.docx  ~$ÖckeroDocs.xlsx  ÖckeroDocs.xlsx  Öckerö kommun Ordlista.xlsx  ÖckeröPOC.docx
extract_and_transform/: cli.py  run_pipeline.py
extract_and_transform/dbt_transform/macros/: export_csv_to_folder.sql  upload_parquet.sql
extract_and_transform/dbt_transform/models/1-raw/: raw_schoolsoft_students.sql
extract_and_transform/dlt_extract/: dlt_extract_pipeline.py  dlt_utils.py  source_elin_testdata.py  source_schoolsoft.py
ockero_data_pipeline/: cli.py  run_pipeline.py
ockero_data_pipeline/dbt/: .gitignore
ockero_data_pipeline/dlt/: pipeline.py  source_elin_testdata.py  source_schoolsoft.py  source_ss12000.py
ockero_data_pipeline/utils/: logger.py
sources/: wint_source.py
(+3 files in other folders)
