[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Skoldata_pipeline"
version = "0.1.0"
authors = [{name='Mattias', email='mattias.ivarsson@point.design'}]
description = "This is a application for extract data from Schoolsoft API and transform that data with DBT"

requires-python = ">=3.8"

dependencies = [
    "typer",
    "duckdb",
    "dbt-duckdb",
    "dlt==1.18.2",
    "python-dotenv==1.2.1"
    # Add all your other dependencies here
]

[tool.setuptools.packages.find]
exclude = ["data*"]  # Exclude dbt, data, dlt folders



[project.scripts]
run-schoolapp = "extract_and_transform.cli:app"  # This creates a command you can run from anywhere
